syntax = "proto3";

option go_package = "github.com/kytruong0712/goffee-shop/user-service/internal/grpcserver/protogen/users";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string fullName = 1 [json_name = "full_name"];
  string phoneNumber = 2 [json_name = "phone_number"];
  string password = 3 [json_name = "password"];
}

message RegisterResponse {
  int64 iamId = 1 [json_name = "iam_id"];
}
